2012-03-02  Tobias Burnus  <burnus@net-b.de>

PR fortran/52270
        * expr.c (gfc_check_vardef_context): Fix check for
        intent-in polymorphic pointer .
        * interface.c (compare_parameter): Allow passing TYPE to
        intent-in polymorphic pointer.

2012-03-02  Tobias Burnus  <burnus@net-b.de>

        PR fortran/52270
        * gfortran.dg/class_51.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@184784 138bc75d-0d04-0410-961f-82ee72b054a4